--- a/AirTech Official.htm
+++ b/AirTech Official.htm
@@ -1,4 +1,5 @@
 <DIV align="center">
+  <button type="button">Click Me!</button>
 <h1 style="font-family:system-ui;">AirTech Official Page</h1>
 <DIV style="font-size:22.5px">
 <p style="font-family:system-ui;">Hello guys! Alex here. HII</p>
