Button Does something

--- a/AirTech Official.htm
+++ b/AirTech Official.htm
@@ -7,4 +7,9 @@
 <title>AirTech Page</title>
 <body style="
 background-color:cyan;">
-  <button type="button">Click Me!</button>
+<button onclick="myFunction()">Click me</button>
+<script>
+function myFunction() {
+  document.getElementById("demo").innerHTML = "Hello World";
+}
+</script>
