--- a/AirTech Official.htm
+++ b/AirTech Official.htm
@@ -7,9 +7,9 @@
 <title>AirTech Page</title>
 <body style="
 background-color:cyan;">
-<button onclick="myFunction()">Click me</button>
+<button onclick="myFunction()">Update page</button>
 <script>
 function myFunction() {
-  document.getElementById("demo").innerHTML = "Hello World";
+  document.getElementById("demo").innerHTML = "UPDATED PAGE";
 }
 </script>
