--- a/AirTech Official.htm
+++ b/AirTech Official.htm
@@ -7,6 +7,7 @@
 <title>AirTech Page</title>
 <body style="
 background-color:cyan;">
+<p id="demo"></p>
 <button onclick="myFunction()">Update page</button>
 <script>
 function myFunction() {
