--- a/AirTech Official.htm
+++ b/AirTech Official.htm
@@ -1,11 +1,6 @@
 <DIV align="center">
 <button onclick="myFunction()">Update page</button>
 <h1 style="font-family:system-ui;">AirTech Official Page</h1>
-<script>
-function myFunction() {
-document.getElementById("demo").innerHTML = "UPDATED PAGE";
-}
-</script>
 <DIV style="font-size:22.5px">
 <p style="font-family:system-ui;">Hello guys! Alex here. HII</p>
 <p id="demo"></p>
@@ -14,3 +9,10 @@ document.getElementById("demo").innerHTML = "UPDATED PAGE";
 <title>AirTech Page</title>
 <body style="
 background-color:cyan;">
+<DIV align="center">
+<script>
+function myFunction() {
+document.getElementById("demo").innerHTML = "UPDATED PAGE";
+}
+</script>
+</DIV>
