--- a/AirTech Official.htm
+++ b/AirTech Official.htm
@@ -9,10 +9,8 @@
 <title>AirTech Page</title>
 <body style="
 background-color:cyan;">
-<DIV align="center">
-<script>
+<script style="text-align:center">
 function myFunction() {
 document.getElementById("demo").innerHTML = "UPDATED PAGE";
 }
 </script>
-</DIV>
