--- a/AirTech Official.htm
+++ b/AirTech Official.htm
@@ -9,7 +9,7 @@
 <title>AirTech Page</title>
 <body style="
 background-color:cyan;">
-<script style="text-align:center">
+<script>
 function myFunction() {
 document.getElementById("demo").innerHTML = "UPDATED PAGE";
 }
