--- a/AirTech Official.htm
+++ b/AirTech Official.htm
@@ -4,6 +4,7 @@
 <DIV style="font-size:22.5px">
 <p style="font-family:system-ui;">Hello guys! Alex here. HII</p>
 <p id="demo"></p>
+  <button onclick="myFunction()">Update page</button>
 </DIV>
 </DIV>
 <title>AirTech Page</title>
