--- a/atp.htm
+++ b/atp.htm
@@ -12,5 +12,6 @@ background-color:cyan;">
 <script>
 function myFunction() {
 document.getElementById("demo").innerHTML = "UPDATED PAGE";
+  <button onClick="window.location.reload();">Refresh Page</button>
 }
 </script>
