--- a/atp.htm
+++ b/atp.htm
@@ -1,5 +1,4 @@
 <DIV align="center">
-<button onClick="window.location.reload();">Refresh Page</button>
 <h1 style="font-family:system-ui;">AirTech Official Page</h1>
 <DIV style="font-size:22.5px">
 <p style="font-family:system-ui;">Hello guys! Alex here. HII</p>
@@ -8,3 +7,6 @@
 <title>AirTech Page</title>
 <body style="
 background-color:cyan;">
+<DIV align="center">
+<button onClick="window.location.reload();">Refresh Page</button>
+</DIV>
