--- a/atp.htm
+++ b/atp.htm
@@ -10,3 +10,4 @@ background-color:cyan;">
 <DIV align="center">
 <button onClick="window.location.reload();">Refresh Page</button>
 </DIV>
+<p>We are a company that is just starting, and we dont own anything. We are expecting to make a mini smartphone within 2023! Thank you for visiting our website. For updates officially released, click the refresh button or refresh your page. Updates take longer to load depending on how much WiFi connection you have.</p>
