--- a/atp.htm
+++ b/atp.htm
@@ -15,4 +15,4 @@ background-color:cyan;">
 <a href="https://github.com/AirTechOfficial/airtech/commits/main">Updates</a>
 </DIV>
 <DIV style="font-size:20px">
-  <p align="center">Version: 1.2.1A</p>
+  <p align="center">Version: 1.2.1B</p>
