--- a/atp.htm
+++ b/atp.htm
@@ -10,8 +10,10 @@ background-color:cyan;">
 <DIV align="center">
 <button onClick="window.location.reload();">Refresh Page</button>
 </DIV>
+<DIV style="font-family:system-ui;">
 <p>We are a company that is just starting, and we dont own anything. We are expecting to make a mini smartphone within 2023! Thank you for visiting our website. For updates officially released, click the refresh button or refresh your page. Updates take longer to load depending on how much WiFi connection you have. For recent updates, Click the button below saying Updates. Also, you can see the official update in SECURITY.md in github. There is more info there.</p>
-<DIV align="center">
+  </DIV>
+  <DIV align="center">
 <a href="https://github.com/AirTechOfficial/airtech/commits/main">Updates</a>
 </DIV>
 <DIV style="font-size:20px">
