--- a/atp.htm
+++ b/atp.htm
@@ -18,4 +18,6 @@ background-color:cyan;">
 </DIV>
 <DIV style="font-size:20px">
   <p align="center">Version: 1.2.1B</p>
-<p style="font-size:30px">Happy birthday Lizzy! Hope you enjoy your day!</p>
+  <DIV style="font-family:system-ui;">
+<h1 align="center">Happy birthday Lizzy! Hope you enjoy your day!</h1>
+</DIV>
