--- a/atp.htm
+++ b/atp.htm
@@ -1,10 +1,10 @@
 <DIV align="center">
-<h1 style="font-family:system-ui;">AirTech Official Page</h1>
+<h1 style="font-family:system-ui;">AirTech Electronics Page</h1>
 <DIV style="font-size:22.5px">
 <p style="font-family:system-ui;">Hello guys! Alex here. HII</p>
 </DIV>
 </DIV>
-<title>AirTech Page</title>
+<title>AirTech Electronics</title>
 <body style="
 background-color:cyan;">
 <DIV align="center">
