--- a/atp.htm
+++ b/atp.htm
@@ -17,7 +17,7 @@ background-color:cyan;">
 <a href="https://github.com/AirTechOfficial/airtech/commits/main">Updates</a>
 </DIV>
 <DIV style="font-size:20px">
-  <p align="center">Version: 1.2.1B</p>
+  <p align="center">Version: 1.2.2</p>
   <DIV style="font-family:system-ui;">
 <h1 align="center">Happy birthday Lizzy! Hope you enjoy your day!</h1>
 </DIV>
